--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,6 @@
     <groupId>com.cloud.mall</groupId>
     <artifactId>mall4Cloud</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+aasd
 
 </project>
